Name:                   hermes
Version:                0.1.0
Author:                 Ben Bangert <bbangert@mozilla.com>
Maintainer:             Ben Bangert <bbangert@mozilla.com>
License:                MPL-2.0
License-File:           LICENSE
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -threaded
  Exposed-Modules:
    Hermes
    Hermes.Protocol
  Other-Modules:
  Build-Depends:
      base        >= 4        && < 5
    , attoparsec  >= 0.12.1.0
    , bytestring  >= 0.10.4.0
    , cryptohash  >= 0.11.5
    , uuid        >= 1.3.3
