Name:                   hermes
Version:                0.1.0
Author:                 Ben Bangert <bbangert@mozilla.com>
Maintainer:             Ben Bangert <bbangert@mozilla.com>
License:                MPL-2.0
License-File:           LICENSE
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -threaded
  Exposed-Modules:
    Hermes
    Hermes.Protocol
    Hermes.Protocol.Binary
    Hermes.Protocol.Websocket
  Other-Modules:
  Build-Depends:
      base        >= 4        && < 5
    , attoparsec  >= 0.12.1.0
    , binary      >= 0.7.2.1
    , byteable    >= 0.1.1
    , bytestring  >= 0.10.4.0
    , cryptohash  >= 0.11.5
    , text        >= 1.1
    , uuid        >= 1.3.3

Executable cn
  Default-Language:     Haskell2010
  HS-Source-Dirs:       hermes-cn
  Main-is:              Main.hs
  GHC-Options:          -Wall -Werror -threaded
  Other-Modules:
    Hermes.ConnectionNode.Types
    Hermes.ConnectionNode.WebSocketServer
  Build-depends:
      base            >= 4.6      && < 5
    , attoparsec      >= 0.12.1.0
    , bytestring      >= 0.10.4.0
    , containers      >= 0.5
    , file-embed      >= 0.0.7
    , hermes          >= 0.1
    , io-streams
    , http-types
    , monad-loops     >= 0.4.2.1
    , time
    , transformers    >= 0.3
    , websockets      >= 0.8.2.4
    , text            >= 1.1
    , stm             >= 2.4.2
    , stm-chans       >= 3.0
    , uuid            >= 1.3.3
    , wai             >= 3.0
    , wai-app-static  >= 3.0
    , wai-websockets  >= 3.0
    , warp            >= 3.0

Executable wstester
  Default-Language:     Haskell2010
  Main-is:              wstester/Main.hs
  GHC-Options:          -O2 -Wall -threaded -funfolding-use-threshold=16 -optc-O3
  Build-depends:
      base          >= 4.6      && < 5
    , async         >= 2.0.1.4
    , bytestring  >= 0.10.4.0
    , containers    >= 0.5
    , websockets    >= 0.8.2.4
    , io-streams

Executable simpleserver
  Default-Language:     Haskell2010
  Main-is:              simpleserver/Main.hs
  GHC-Options:          -Wall -threaded
  Build-depends:
      base            >= 4.6      && < 5
    , bytestring      >= 0.10.4.0
    , conduit >= 1.1
    , containers      >= 0.5
    , file-embed      >= 0.0.7
    , transformers    >= 0.3
    , websockets      >= 0.8.2.4
    , text            >= 1.1
    , time
    , stm             >= 2.4.2
    , uuid            >= 1.3.3
    , wai             >= 2.0
    , wai-app-static  >= 2.0
    , wai-websockets  >= 2.0
    , warp            >= 2.0
    , yesod-websockets
    , yesod-core
    , conduit-combinators
